--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "our first node.js server",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/momin-abdurraheman/Creating-First-Server/issues"
   },
-  "homepage": "https://github.com/momin-abdurraheman/Creating-First-Server#readme"
+  "homepage": "https://github.com/momin-abdurraheman/Creating-First-Server#readme",
+  "dependencies": {
+    "nodemon": "^2.0.19"
+  }
 }
